style: 💄 fix table wrap style

--- a/components/wrapper/style/index.scss
+++ b/components/wrapper/style/index.scss
@@ -37,5 +37,11 @@ $contentBackground: #fff;
     margin: 0 12px;
     padding: 24px;
     border-radius: 4px;
+
+    .ant-table-wrapper {
+      th, td {
+        white-space: nowrap;
+      }
+    }
   }
 }
